refactor: fix linting warnings and errors
